src/test/deca/context/valid/method_call_prefix_this.deca
/*
    Description : appel de méthode en préfixant par this 

    Résultat : OK
*/
class B
{
    int e(){
        return 5;
    }
    int x = this.e();
}
