src/test/deca/context/invalid/if_plus.deca
/*
    Description : Utilisation d'une addition au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x;
    if (1+1){
        x = 2;
    }
}
